Prevent the store switcher from wrapping
Fixes DD 71427 380
Fixes DD 71427 381

--- a/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
+++ b/app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
@@ -968,9 +968,9 @@ footer.page-footer {
 
             .switcher-store {
                 margin-top: $indent__s;
-                margin-bottom: 0;
+                margin-bottom: $indent__l;
                 width: 100%;
-                max-width: 100px;
+                max-width: 115px;
                 padding-left: $indent__s;
             }
 
